--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Lista Tareas</title>
 </head>
 
-<body class="bg-blue-400
- m-0 text-2xl text-white
+<body class="
+text-2xl text-white
 w-screen h-screen place-content-center content-center">
   <div id="root" class="grid justify-between"></div>
   <script type="module" src="/src/main.jsx"></script>
