eliminación total de App.css para transcibirlo al completo a tailwindcss

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="
 text-2xl text-white
 w-screen h-screen place-content-center content-center">
-  <div id="root" class="grid justify-between"></div>
+  <div id="root" class="grid "></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
