añadido logo para pestaña de una agenda

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image" href="/vite.svg" />
+  <link rel="icon" type="image" href="/agenda.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lista Tareas</title>
+  <title>Lista de tareas</title>
 </head>
 
 <body class="
